terraform/ecs/route-table.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }
}

# resource "aws_route_table" "private" {
#   vpc_id = aws_vpc.vpc.id
# }

resource "aws_route_table_association" "route_table_association" {
  subnet_id      = aws_subnet.pub_subnet.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "route_table_association_2" {
  subnet_id      = aws_subnet.pub_subnet_2.id
  route_table_id = aws_route_table.public.id
}

# resource "aws_route_table_association" "route_table_association_3" {
#   subnet_id      = aws_subnet.priv_subnet.id
#   route_table_id = aws_route_table.private.id
# }

# resource "aws_route_table_association" "route_table_association_4" {
#   subnet_id      = aws_subnet.priv_subnet_2.id
#   route_table_id = aws_route_table.private.id
# }
